package sample.Metods;

import javafx.scene.layout.Pane;

public interface Block {
    void draw(Pane pane);
}
