@startuml

title __UNTITLED1's Class Diagram__\n

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    namespace Metods {
      interface sample.Metods.Block {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      abstract class sample.Metods.Decoration {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.HorizLines {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.Square {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.Text {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.Text1 {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.Text2 {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.VertLines {
      }
    }
  }
  

  sample.Controller .up.|> javafx.fxml.Initializable
  sample.Controller o-- sample.Metods.Block : block
  sample.Main -up-|> javafx.application.Application
  sample.Metods.Decoration .up.|> sample.Metods.Block
  sample.Metods.Decoration o-- sample.Metods.Block : block
  sample.Metods.HorizLines -up-|> sample.Metods.Decoration
  sample.Metods.Square -up-|> sample.Metods.Decoration
  sample.Metods.Text -up-|> sample.Metods.Decoration
  sample.Metods.Text1 -up-|> sample.Metods.Decoration
  sample.Metods.Text2 -up-|> sample.Metods.Decoration
  sample.Metods.VertLines -up-|> sample.Metods.Decoration


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
